# nonebot_plugin_xiuxian_2_pmv

./: .gitignore  CONTRIBUTING.md  README.md  adapter_compat.md  items.md  requirements.txt
docker/: Dockerfile  README.md  bot.py  docker-compose.yml  entrypoint.sh  env.dev.example  env.example  pyproject.toml
docs/: adapter_compat.md  architecture_acceptance.md  buff.md  database_web_governance.md  development_roadmap.md  gameplay_notes.md  items.md  media_parser.md  message_channel.md  message_delivery_migration.md  on_compat.md  web_panel.md
nonebot_plugin_xiuxian_2/: __init__.py  paths.py
scripts/: install.bat  install.sh  install_docker.sh  install_termux.sh
tests/: qq_adapter_contract_runner.py  test_accessory_package_service.py  test_accessory_transaction_service.py  test_activity_boss_coop_settlement.py  test_activity_boss_item_raid_settlement.py  test_activity_boss_reward_claim.py  test_activity_claim_all.py  test_activity_collect_exchange.py  test_activity_config_event_service.py  test_activity_pass_claim_transaction.py  test_activity_point_shop_purchase.py  test_activity_sign_settlement.py  test_activity_task_claim_transaction.py  test_adapter_compat_records.py  test_adapter_selector.py  test_admin_accessory_adjustment.py  test_admin_accessory_batch_adjustment.py  test_admin_blackhouse_status.py  test_admin_exp_adjustment_transaction.py  test_admin_impart_stone_adjustment.py  test_admin_impart_stone_batch_adjustment.py  test_admin_item_batch_grant.py  test_admin_item_destroy_transaction.py  test_admin_item_grant_transaction.py  test_alchemy_service.py  (+300 more)
(+683 files in other folders)
